--- a/src/components/css/course-components.css
+++ b/src/components/css/course-components.css
@@ -3,6 +3,8 @@
     margin: 1%;
     display: grid;
     grid-template-columns: 80% 20%;
+    grid-template-rows: 20% auto;
+    height: 100%;
 }
 #title{
     grid-row: 1;
@@ -13,4 +15,7 @@
     grid-row: 1;
     grid-column: 2;
     text-decoration: underline;
+}
+.course-result{
+    line-height: 0.5;
 }
