--- a/src/components/css/course-components.css
+++ b/src/components/css/course-components.css
@@ -1,6 +1,7 @@
 .course-component{
     background-color: red;
     margin: 1%;
+    padding-left: 1%;
     display: grid;
     grid-template-columns: 80% 20%;
     grid-template-rows: 20% auto;
@@ -9,13 +10,29 @@
 #title{
     grid-row: 1;
     grid-column: 1;
+    font-size: 1.5em;
     text-decoration: underline;
 }
 #percentage{
     grid-row: 1;
     grid-column: 2;
+    font-size: 1.5em;
     text-decoration: underline;
 }
-.course-result{
-    line-height: 0.5;
+
+.course-event{
+    display: grid;
+    grid-column: 1/3;
+    grid-template-columns: 80% 20%;
+    width: 100%;
+}
+.course-event .course-item{
+    grid-column: 1
+}
+.course-event .course-result{
+    grid-column: 2
+}
+.course-event .course-upcoming{
+    grid-column: 2;
+    margin-top: 2%;
 }
