--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 }
 
 .sidebar-semester{
-  background-color: aquamarine;
+  background-color: #A7CCED;
   border-radius: 3%;
   margin: 2%;
 }
@@ -16,7 +16,6 @@
   display: flex;
   flex-direction: column;
   color: black;
-  padding-left: 1%;
   height: 100%;
 }
 
