--- a/src/components/css/course-components.css
+++ b/src/components/css/course-components.css
@@ -1,11 +1,12 @@
 .course-component{
-    background-color: red;
+    background-color: #A7CCED;
     margin: 1%;
     padding-left: 1%;
     display: grid;
     grid-template-columns: 80% 20%;
     grid-template-rows: 20% auto;
     height: 100%;
+    overflow: auto;
 }
 #title{
     grid-row: 1;
@@ -25,6 +26,7 @@
     grid-column: 1/3;
     grid-template-columns: 80% 20%;
     width: 100%;
+    margin-top: 1%;
 }
 .course-event .course-item{
     grid-column: 1
@@ -34,5 +36,4 @@
 }
 .course-event .course-upcoming{
     grid-column: 2;
-    margin-top: 2%;
 }
