--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Oxygen');
+
 html{
   height: 100%;
 }
@@ -19,6 +21,8 @@ body {
   background-color: inherit;
   color: rgb(100, 100, 101);
   align-self: center;
+  font-family: 'Oxygen';
+  font-size: 2.5em;
 }
 #sidebar-nav{
     /*-----body grid location-----*/
@@ -34,4 +38,5 @@ body {
   grid-row: 2;
   grid-column: 2;
   height: 100%;
+  font-family: 'Oxygen';
 }
