--- a/src/components/css/course-components.css
+++ b/src/components/css/course-components.css
@@ -12,13 +12,13 @@
 #title{
     grid-row: 1;
     grid-column: 1;
-    font-size: 1.5em;
+    font-size: 100%;
     text-decoration: underline;
 }
 #percentage{
     grid-row: 1;
     grid-column: 2;
-    font-size: 1.5em;
+    font-size: 100%;
     text-decoration: underline;
 }
 
