--- a/src/components/css/course-components.css
+++ b/src/components/css/course-components.css
@@ -27,6 +27,7 @@
 	grid-template-columns: 80% 20%;
 	width: 100%;
 	margin-top: 1%;
+	color: rgb(58, 58, 59);
   }
   .course-event .course-item {
 	grid-column: 1;
