--- a/src/components/css/views.css
+++ b/src/components/css/views.css
@@ -26,7 +26,7 @@
 }
 
 /*Right side----*/
-.main-right{
+.main-right#right-course{
 	grid-row: 1;
 	display: grid;
 	grid-template-rows: 50% 50%;
@@ -35,11 +35,20 @@
 	height: 100%;
 	width: 100%;
 }
+.main-right#right-term{
+	grid-row: 1;
+	color: black;
+	background-color: #545E75;
+}
 #right-course{
 	grid-column: 2/4;
 }
 #right-term{
+	height: 100%;
+	width: 100%;
+	text-align: center;
 	grid-column: 3/4;
+	vertical-align: middle;
 }
 .average-container{
 	margin-top: 2%;	
