--- a/src/components/css/term-components.css
+++ b/src/components/css/term-components.css
@@ -4,7 +4,7 @@
     border: 3px solid green;
     grid-template-columns: 80% 20%;
     margin: 2%;
-    padding: 0%;
+    padding-left: 2%;
     height: 15%;
 }
 #title{
@@ -16,20 +16,21 @@
     grid-row: 1;
     grid-column: 2;
     background-color: #A7CCED;
-
+    height: 100%;
 }
+/*-------Right Side--------*/
 .vertical-progress{
-    border: 3px solid pink;
-    padding-top: 10%;
+    grid-row: 1/3;
+    margin-top: 1%;
     height: 100%;
     width: 100%;
     color: black;
-    align-content: center;
 }
 .progress-blocks{
-	border: 1px solid white;
+	border: 0.5px solid white;
     display: block;
-    margin: 0;
-    width: 80%;
-    height: 7%;
+    margin: auto;
+    width: 6em;
+    height: 1%;
+    align-self: center;
 }
