--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,8 @@ html, body, #root{
   color: rgb(100, 100, 101);
   align-self: center;
   font-family: 'Oxygen';
-  font-size: 2.5em;
+  font-size: 2em;
+  height: 100%;
 }
 #sidebar-nav{
     /*-----body grid location-----*/
