--- a/src/components/css/term-components.css
+++ b/src/components/css/term-components.css
@@ -1,16 +1,15 @@
 /*------Left Side----------*/
 .term-component{
     display: grid;
-    border: 3px solid green;
     grid-template-columns: 80% 20%;
     margin: 2%;
     padding-left: 2%;
     height: 15%;
+    border-radius: 3%;
 }
 #title{
     grid-row: 1;
     grid-column: 1;
-
 }
 #grade{
     grid-row: 1;
